WP7Service WP7 backup

--- a/Zapisy/Zapisy/Web.config
+++ b/Zapisy/Zapisy/Web.config
@@ -6,10 +6,12 @@
 <configuration>
 	<connectionStrings>
 		<!--<add name="zapisyConnectionString" connectionString="Data Source=MAT-PC\SQLEXPRESS2008;Initial Catalog=zapisy;User ID=sa;Password=master" providerName="System.Data.SqlClient"/>-->
-		<!--connectionString="Data Source=.\SQLEXPRESS;AttachDbFilename=|DataDirectory|\zapisy.mdf;Integrated Security=True;User Instance=True"-->
-	<add name="zapisyConnectionString"
-		 connectionString="data source=.\SQLEXPRESS;Integrated Security=SSPI;initial catalog=zapisy;MultipleActiveResultSets=True"   
+		<add name="zapisyConnectionString"
+		 connectionString="Data Source=.\SQLEXPRESS;AttachDbFilename=|DataDirectory|\zapisy.mdf;Integrated Security=False;User Instance=True"
 		  providerName="System.Data.SqlClient" />
+	<!--<add name="zapisyConnectionString"
+		 connectionString="data source=.\SQLEXPRESS;Integrated Security=SSPI;initial catalog=zapisy;MultipleActiveResultSets=True"   
+		  providerName="System.Data.SqlClient" />-->
 		<!--<add name="zapisyConnectionString"
 		 connectionString="Data Source=netfx45lab;Initial Catalog=DB_user1511;User ID=user1511;Password=ribah6va;Integrated Security=False;MultipleActiveResultSets=True"
 		  providerName="System.Data.SqlClient" />-->
